--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -126,7 +126,7 @@
     "react-native-vision-camera": "^4.0.0-beta.13",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
-    "zod": "3.22.5"
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.4.5",
