build: move declarationMap in submodules

--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@azzapp/shared/*": ["../shared/src/*"],
       "#*": ["./src/*"]
-    }
+    },
+    "declarationMap": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
   "exclude": [
