--- a/packages/payment/tsconfig.json
+++ b/packages/payment/tsconfig.json
@@ -4,7 +4,8 @@
     "noEmit": true,
     "paths": {
       "#*": ["./src/*"]
-    }
+    },
+    "declarationMap": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
   "exclude": ["lib", "node_modules", "package.json", "tsconfig.json"]
