--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -7,7 +7,8 @@
       "@azzapp/data/*": ["../data/src/*"],
       "#testing/*": ["./testing/*"],
       "#*": ["./src/*"]
-    }
+    },
+    "declarationMap": true
   },
   "exclude": [
     "node_modules",
