--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "baseUrl": "./src",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "declarationMap": true
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": [
