--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,6 @@
     "resolvePackageJsonExports": true,
     "resolveJsonModule": true,
     "incremental": true,
-    "noErrorTruncation": true,
-    "declarationMap": true
+    "noErrorTruncation": true
   }
 }
