--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -25,6 +25,8 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-data-grid": "latest",
+    "@sentry/nextjs": "^7.111.0",
+    "@sentry/tracing": "^7.111.0",
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.30.8",
     "lodash": "^4.17.21",
