--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -3,9 +3,9 @@
   "version": "0.5.5-canary.262",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e ./../../.env -- next dev -p 3005",
-    "build": "dotenv -e ./../../.env -- next build",
-    "start": "dotenv -e ./../../.env -- next start",
+    "dev": "next dev -p 3005",
+    "build": "next build",
+    "start": "next start",
     "typecheck": "tsc -p tsconfig.next.json --noEmit",
     "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo || true && rm -rf .next && rm -rf node_modules"
   },
