--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -31,7 +31,7 @@
     "drizzle-orm": "^0.30.8",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
-    "next": "^14.2.2",
+    "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.3",
