--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -48,7 +48,7 @@
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
-    "next": "^14.2.2",
+    "next": "14.1.4",
     "next-axiom": "^1.1.1",
     "next-cloudinary": "^6.5.1",
     "os-browserify": "^0.3.0",
