feat: calculate taxes (#3330)

--- a/packages/payment/package.json
+++ b/packages/payment/package.json
@@ -30,6 +30,7 @@
     "@azzapp/data": "0.5.5-canary.269",
     "@azzapp/shared": "0.5.5-canary.269",
     "openapi-fetch": "^0.9.3",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "@mlecoq/sales-tax": "2.14.0"
   }
 }
