--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "baseUrl": "./src",
-    "outDir": "./lib",
-    "declarationMap": true
+    "outDir": "./lib"
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": [
