--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,7 +5,7 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "rn:watch": "react-native start",
-    "run:android": "react-native run-android --no-packager --mode developmentDebug --appId=com.azzapp.app-dev",
+    "run:android": "react-native run-android --no-packager --mode developmentDebug --appId=com.azzapp.app_dev",
     "run:ios": "react-native run-ios --no-packager --scheme azzapp-dev",
     "pod-install": "cd ios && bundle exec pod install",
     "clean": "watchman watch-del-all && rm -Rf node_modules && rm -Rf ios/Pods && rm -Rf ios/build",
