build: upgrade to yarn v3 (#3380)
* build: upgrade to yarn v3

* support yarn v3 in github action

* update yarn lock

* add missing quotes

* remove deprecated param

* fix command cache folder

* remove broken tests

* fix: duplicated import

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -17,14 +17,15 @@ jobs:
       PAYMENT_API_URL: ${{ vars.PAYMENT_API_URL }}
     steps:
       - uses: actions/checkout@v3
-
+      - name: Enable Corepack
+        run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
           
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"    
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"    
         
       - name: Cache yarn
         uses: actions/cache@v3
@@ -36,7 +37,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile  --immutable
+        run: yarn install --immutable
   
 
       # Testing
