--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,15 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-
+      - name: Enable Corepack
+        run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"    
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"    
         
       - name: Cache yarn
         uses: actions/cache@v3
@@ -31,7 +32,7 @@ jobs:
       
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile  --immutable
+        run: yarn install --immutable
     
       - name: Git config
         run: |
