--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,14 +33,15 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-
+      - name: Enable Corepack
+        run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"    
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"    
         
       - name: Cache yarn
         uses: actions/cache@v3
@@ -55,7 +56,7 @@ jobs:
         run: yarn global add vercel@latest
         
       - name: Install dependencies
-        run: yarn install --frozen-lockfile  --immutable
+        run: yarn install --immutable
 
       ############################################
       #
@@ -146,7 +147,7 @@ jobs:
           git add .
           git commit -m "chore: bump version [skip ci]"
           git push origin $GITHUB_REF_NAME
-          yarn install --frozen-lockfile  --immutable
+          yarn install --immutable
         
       ############################################
       #
