--- a/packages/app/.gitignore
+++ b/packages/app/.gitignore
@@ -20,7 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-ios/.xcode.env.local
+**/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -60,7 +60,7 @@ fastlane/test_output
 *.jsbundle
 
 # Ruby / CocoaPods
-/ios/Pods/
+/**/Pods/
 /vendor/bundle/
 
 # Temporary files created by Metro to check the health of the file watcher
