--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -66,14 +66,13 @@
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-community/datetimepicker": "^8.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native/metro-config": "^0.74.80",
+    "@react-native/metro-config": "^0.74.83",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "^5.22.0",
+    "@sentry/react-native": "^5.22.2",
     "@shopify/flash-list": "1.6.4",
-    "@shopify/react-native-skia": "^1.2.2",
-    "@testing-library/react-native": "^12.4.5",
+    "@shopify/react-native-skia": "^1.2.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^50.0.17",
@@ -90,14 +89,14 @@
     "expo-status-bar": "^1.11.1",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.1",
-    "i18n-iso-countries": "^7.11.0",
-    "libphonenumber-js": "^1.10.60",
+    "i18n-iso-countries": "^7.11.1",
+    "libphonenumber-js": "^1.11.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.2",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.51.3",
-    "react-intl": "^6.6.5",
+    "react-hook-form": "^7.51.4",
+    "react-intl": "^6.6.6",
     "react-native": "^0.73.7",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.9",
@@ -105,40 +104,41 @@
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-email-link": "^1.16.0",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.11.6",
+    "react-native-keyboard-controller": "^1.11.7",
     "react-native-localize": "^3.1.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "^6.3.0",
+    "react-native-pager-view": "^6.3.1",
     "react-native-permissions": "^4.1.5",
-    "react-native-quick-base64": "^2.1.1",
-    "react-native-purchases": "^7.26.2",
-    "react-native-reanimated": "~3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
-    "react-native-share": "^10.1.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-purchases": "^7.27.1",
+    "react-native-quick-base64": "^2.1.2",
+    "react-native-reanimated": "~3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.0.1",
+    "react-native-vision-camera": "^4.0.3",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.4.5",
+    "@testing-library/react-native": "^12.5.0",
     "@types/chroma-js": "^2.4.4",
     "@types/react": "^18.2.79",
     "@types/react-relay": "^16.0.6",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/react-test-renderer": "^18.3.0",
     "@types/relay-test-utils": "^14.1.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
-    "react-test-renderer": "^18.2.0",
+    "react-test-renderer": "^18.3.1",
     "relay-test-utils": "^16.2.0",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.4.5"
   }
 }
