--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -22,24 +22,24 @@
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@lokalise/node-api": "^12.4.1",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-data-grid": "latest",
-    "@sentry/nextjs": "^7.112.0",
-    "@sentry/tracing": "^7.112.0",
+    "@sentry/nextjs": "^7.113.0",
+    "@sentry/tracing": "^7.113.0",
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.30.8",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
-    "next": "^14.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.23.3",
-    "@lokalise/node-api": "^12.4.0"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25"
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0"
   }
 }
