--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -30,13 +30,15 @@
     "definition:watch"
   ],
   "dependencies": {
-    "@azzapp/i18n": "0.5.5-canary.283",
-    "@azzapp/shared": "0.5.5-canary.283",
     "@azzapp/data": "0.5.5-canary.283",
+    "@azzapp/i18n": "0.5.5-canary.283",
     "@azzapp/payment": "0.5.5-canary.283",
+    "@azzapp/shared": "0.5.5-canary.283",
     "@graphql-tools/schema": "^10.0.3",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@sentry/nextjs": "^7.113.0",
     "dataloader": "^2.2.2",
+    "expiry-map": "^2.0.0",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
     "graphql-relay": "^0.10.1",
@@ -44,10 +46,11 @@
     "graphql-shield": "^7.6.5",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "zod": "^3.23.3",
-    "expiry-map": "^2.0.0"
+    "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@types/lodash": "4.17.0"
+    "@babel/cli": "7.24.1",
+    "@types/lodash": "4.17.0",
+    "typescript": "^5.4.5"
   }
 }
