--- a/packages/payment/package.json
+++ b/packages/payment/package.json
@@ -27,8 +27,8 @@
     "definition:watch"
   ],
   "dependencies": {
-    "@azzapp/data": "0.5.5-canary.284",
-    "@azzapp/shared": "0.5.5-canary.284",
+    "@azzapp/data": "workspace:^",
+    "@azzapp/shared": "workspace:^",
     "@mlecoq/sales-tax": "2.14.1",
     "dayjs": "^1.11.11",
     "openapi-fetch": "^0.9.5"
