--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,11 +15,11 @@
     "dev"
   ],
   "dependencies": {
-    "@azzapp/data": "0.5.5-canary.284",
-    "@azzapp/i18n": "0.5.5-canary.284",
-    "@azzapp/payment": "0.5.5-canary.284",
-    "@azzapp/schema": "0.5.5-canary.284",
-    "@azzapp/shared": "0.5.5-canary.284",
+    "@azzapp/data": "workspace:^",
+    "@azzapp/i18n": "workspace:^",
+    "@azzapp/payment": "workspace:^",
+    "@azzapp/schema": "workspace:^",
+    "@azzapp/shared": "workspace:^",
     "@conform-to/react": "^1.1.3",
     "@conform-to/zod": "^1.1.3",
     "@envelop/dataloader": "^6.0.0",
