--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,8 +15,8 @@
     "rn:watch"
   ],
   "dependencies": {
-    "@azzapp/i18n": "0.5.5-canary.285",
-    "@azzapp/shared": "0.5.5-canary.285",
+    "@azzapp/i18n": "workspace:^",
+    "@azzapp/shared": "workspace:^",
     "@expo-google-fonts/amatic-sc": "^0.2.3",
     "@expo-google-fonts/anton": "^0.2.3",
     "@expo-google-fonts/archivo": "^0.2.3",
