--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -13,8 +13,8 @@
     "dev"
   ],
   "dependencies": {
-    "@azzapp/data": "0.5.5-canary.285",
-    "@azzapp/shared": "0.5.5-canary.285",
+    "@azzapp/data": "workspace:^",
+    "@azzapp/shared": "workspace:^",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
