--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -31,7 +31,7 @@
     "definition:watch"
   ],
   "dependencies": {
-    "@azzapp/shared": "0.5.5-canary.285",
+    "@azzapp/shared": "workspace:^",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.18.0",
     "drizzle-orm": "^0.30.8",
