--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -258,8 +258,7 @@ jobs:
           if [ "$GITHUB_REF" == "refs/heads/stable" ]; then
             ADDITIONAL_ARGS="--prod"
           fi
-          yarn dlx vercel@latest --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
-          yarn dlx vercel@latest deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
+          yarn dlx vercel@latest deploy --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
 
       ############################################
       #
@@ -283,17 +282,6 @@ jobs:
           fi
           yarn dlx vercel@latest pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
 
-      - name: Azzapp Backoffice - Vercel build
-        env:
-          VERCEL_PROJECT_ID: "azzapp-backoffice"
-        run: |
-          ADDITIONAL_ARGS=""
-          GITHUB_REF="${{ github.ref }}"
-          if [ "$GITHUB_REF" == "refs/heads/stable" ]; then
-            ADDITIONAL_ARGS="--prod"
-          fi
-          yarn dlx vercel@latest build --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
-
       - name: Azzapp Backoffice - Vercel deployment
         env:
           VERCEL_PROJECT_ID: "azzapp-backoffice"
@@ -304,7 +292,7 @@ jobs:
             ADDITIONAL_ARGS="--prod"
           fi
           rm -fr ./packages/web/.next
-          yarn dlx vercel@latest deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
+          yarn dlx vercel@latest deploy --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
       
       ############################################
       #
