--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -83,7 +83,7 @@
     "expo-contacts": "~12.8.2",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
-    "expo-image": "^1.11.0",
+    "expo-image": "~1.10.6",
     "expo-linear-gradient": "~12.7.2",
     "expo-media-library": "~15.9.2",
     "expo-sensors": "~12.9.1",
