--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -51,6 +51,9 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - name: Install Vercel CLI
+        run: npm i -g vercel@latest
         
       - name: Install dependencies
         run: yarn install --immutable
@@ -247,7 +250,7 @@ jobs:
           elif [ "$GITHUB_REF" == "refs/heads/main" ]; then
             ADDITIONAL_ARGS="--git-branch=main"
           fi
-          yarn dlx vercel@latest pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+          vercel pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
 
       - name: Azzapp Web - Vercel build
         env:
@@ -258,7 +261,18 @@ jobs:
           if [ "$GITHUB_REF" == "refs/heads/stable" ]; then
             ADDITIONAL_ARGS="--prod"
           fi
-          yarn dlx vercel@latest deploy --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
+          vercel build --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+
+      - name: Azzapp Web - Vercel deployment
+        env:
+          VERCEL_PROJECT_ID: "azzapp"
+        run: |
+          ADDITIONAL_ARGS=""
+          GITHUB_REF="${{ github.ref }}"
+          if [ "$GITHUB_REF" == "refs/heads/stable" ]; then
+            ADDITIONAL_ARGS="--prod"
+          fi
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
 
       ############################################
       #
@@ -280,7 +294,18 @@ jobs:
           elif [ "$GITHUB_REF" == "refs/heads/main" ]; then
             ADDITIONAL_ARGS="--git-branch=main"
           fi
-          yarn dlx vercel@latest pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+          vercel pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+
+      - name: Azzapp Backoffice - Vercel build
+        env:
+          VERCEL_PROJECT_ID: "azzapp-backoffice"
+        run: |
+          ADDITIONAL_ARGS=""
+          GITHUB_REF="${{ github.ref }}"
+          if [ "$GITHUB_REF" == "refs/heads/stable" ]; then
+            ADDITIONAL_ARGS="--prod"
+          fi
+          vercel build --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
 
       - name: Azzapp Backoffice - Vercel deployment
         env:
@@ -292,7 +317,7 @@ jobs:
             ADDITIONAL_ARGS="--prod"
           fi
           rm -fr ./packages/web/.next
-          yarn dlx vercel@latest deploy --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
       
       ############################################
       #
