--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -76,29 +76,29 @@
     "@shopify/react-native-skia": "^1.2.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^50.0.17",
-    "expo-av": "^13.10.6",
-    "expo-blur": "^12.9.2",
-    "expo-clipboard": "~5.0.1",
-    "expo-contacts": "~12.8.2",
-    "expo-font": "~11.10.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-media-library": "~15.9.2",
-    "expo-sensors": "~12.9.1",
-    "expo-status-bar": "^1.11.1",
+    "expo": "^51.0.5",
+    "expo-av": "^14.0.4",
+    "expo-blur": "^13.0.2",
+    "expo-clipboard": "~6.0.3",
+    "expo-contacts": "~13.0.3",
+    "expo-font": "~12.0.5",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.9",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-media-library": "~16.0.3",
+    "expo-sensors": "13.0.4",
+    "expo-status-bar": "^1.12.1",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.1",
-    "i18n-iso-countries": "^7.11.1",
+    "i18n-iso-countries": "^7.11.2",
     "libphonenumber-js": "^1.11.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.2",
     "lz-string": "^1.5.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-intl": "^6.6.6",
-    "react-native": "^0.73.7",
+    "react-native": "^0.74.1",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-bootsplash": "^5.5.3",
@@ -108,7 +108,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.11.7",
+    "react-native-keyboard-controller": "^1.12.0",
     "react-native-localize": "^3.1.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
@@ -126,20 +126,22 @@
     "react-native-vision-camera": "^4.0.3",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.5.0",
     "@types/chroma-js": "^2.4.4",
-    "@types/react": "^18.2.79",
+    "@types/react": "^18.3.2",
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.3.0",
     "@types/relay-test-utils": "^14.1.4",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.3.1",
     "relay-test-utils": "^16.2.0",
-    "rimraf": "^5.0.5",
+    "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   }
 }
