--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -59,6 +59,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.6",
+    "sanitize-html": "^2.13.0",
     "semver": "^7.6.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
@@ -71,6 +72,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/sanitize-html": "^2.3.0",
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/next-plugin": "^2.4.0"
   }
