--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/app",
-  "version": "0.5.6-rc.1",
+  "version": "0.5.13-canary.1",
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
