--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/backoffice",
-  "version": "0.5.6-rc.1",
+  "version": "0.5.13-canary.1",
   "private": true,
   "packageManager": "yarn@3.6.4",
   "scripts": {
