--- a/packages/payment/package.json
+++ b/packages/payment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/payment",
-  "version": "0.5.6-rc.1",
+  "version": "0.5.13-canary.1",
   "private": true,
   "exports": {
     ".": {
