--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -30,7 +30,8 @@
         "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-dev.vercel.app/api",
         "DEPLOYMENT_ENVIRONMENT": "development",
         "PURCHASE_IOS_KEY": "appl_XWlrdgSwpfsScIXTNWeFxtyCqzz",
-        "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR"
+        "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR",
+        "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp-dev"
       }
     },
     "staging": {
@@ -48,7 +49,8 @@
         "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-staging.vercel.app/api",
         "DEPLOYMENT_ENVIRONMENT": "staging",
         "PURCHASE_IOS_KEY": "appl_XWlrdgSwpfsScIXTNWeFxtyCqzz",
-        "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR"
+        "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR",
+        "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp-dev"
       }
     },
     "production": {
@@ -63,7 +65,8 @@
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp.vercel.app/",
         "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp.vercel.app/api",
-        "DEPLOYMENT_ENVIRONMENT": "production"
+        "DEPLOYMENT_ENVIRONMENT": "production",
+        "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp"
       }
     }
   },
