--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
     "update-graphql-schema": "yarn graphql-codegen",
-    "clean": "yarn workspaces run clean && rm -Rf node_modules && rm -f tsconfig.tsbuildinfo",
+    "clean": "turbo run clean && rm -Rf node_modules && rm -f tsconfig.tsbuildinfo",
     "release": "node ./scripts/release.js",
     "bump-version": "node ./scripts/bumpVersion.js",
     "write-dev-changelog": "node ./scripts/writeDevChangeLog.js",
