build: move payment script to payment package (#3390)

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "release": "node ./scripts/release.js",
     "bump-version": "node ./scripts/bumpVersion.js",
     "write-dev-changelog": "node ./scripts/writeDevChangeLog.js",
-    "persist-queries": "yarn workspace @azzapp/web persist-queries",
-    "payment-api-client": "touch .env && node --env-file=.env ./scripts/generatePaymentApiClient.js"
+    "persist-queries": "yarn workspace @azzapp/web persist-queries"
   },
   "devScripts": [
     "relay:watch",
