--- a/packages/payment/tsconfig.json
+++ b/packages/payment/tsconfig.json
@@ -7,5 +7,5 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
-  "exclude": ["lib", "node_modules", "package.json", "tsconfig.json"]
+  "exclude": ["scripts", "lib", "node_modules", "package.json", "tsconfig.json"]
 }
