--- a/packages/payment/turbo.json
+++ b/packages/payment/turbo.json
@@ -3,9 +3,15 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build", "//#payment-api-client"],
+      "dependsOn": ["payment-api-client", "^build"],
       "outputs": ["lib/**"],
       "inputs": ["src/**"]
+    },
+    "payment-api-client": {
+      "passThroughEnv": ["PAYMENT_API_URL"],
+      "dependsOn": [],
+      "inputs": [],
+      "cache": false
     },
     "typecheck": {
       "dependsOn": ["^build"],
