--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -36,6 +36,7 @@
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
