--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "@sendgrid/mail": "^8.1.3",
     "@sentry/nextjs": "^7.113.0",
     "@sentry/tracing": "^7.113.0",
+    "@types/react-lottie": "^1.2.10",
     "@upstash/ratelimit": "^1.1.3",
     "@vercel/kv": "^1.0.1",
     "bcrypt-ts": "^5.0.2",
@@ -59,6 +60,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.6",
+    "react-lottie": "^1.2.4",
     "sanitize-html": "^2.13.0",
     "semver": "^7.6.0",
     "server-only": "^0.0.1",
