--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,6 +38,7 @@
     "@sentry/tracing": "^7.113.0",
     "@types/react-lottie": "^1.2.10",
     "@upstash/ratelimit": "^1.1.3",
+    "@vercel/functions": "^1.0.2",
     "@vercel/kv": "^1.0.1",
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
