--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "@shopify/react-native-skia@^1.2.3": "patch:@shopify/react-native-skia@npm%3A1.2.3#./.yarn/patches/@shopify-react-native-skia-npm-1.2.3-f2a2700481.patch",
     "expo-contacts@~13.0.3": "patch:expo-contacts@npm%3A13.0.3#./.yarn/patches/expo-contacts-npm-13.0.3-c6435ab472.patch",
     "react-native-vision-camera@^4.0.5": "patch:react-native-vision-camera@npm%3A4.0.5#./.yarn/patches/react-native-vision-camera-npm-4.0.5-0f2bdc9daa.patch",
-    "@shopify/react-native-skia@^1.3.0": "patch:@shopify/react-native-skia@npm%3A1.3.0#./.yarn/patches/@shopify-react-native-skia-npm-1.3.0-85f18b81fd.patch"
+    "@shopify/react-native-skia@^1.3.0": "patch:@shopify/react-native-skia@npm%3A1.3.0#./.yarn/patches/@shopify-react-native-skia-npm-1.3.0-85f18b81fd.patch",
+    "expo-font@~12.0.5": "patch:expo-font@npm%3A12.0.5#./.yarn/patches/expo-font-npm-12.0.5-a20030dadb.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
