update mobile links fot legal stuff (#3505)
* update mobile links fot legal stuff

* Migrate configuration legal links from constants file to .env file

* add env vars in eas.json

---------

Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -8,3 +8,7 @@ USE_OFFLINE_CACHE=
 # PURCHASE (those value should work for the dev testing version)
 PURCHASE_ANDROID_KEY=goog_oeNrOyuTiDWViuGRRPpDIGlVKMR
 PURCHASE_IOS_KEY=appl_XWlrdgSwpfsScIXTNWeFxtyCqzz
+
+# LINKS FOR LEGAL PAGES
+TERMS_OF_SERVICE=https://www.azzapp.com/legal/terms-of-service
+PRIVACY_POLICY=https://www.azzapp.com/legal/privacy
