--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,6 +67,7 @@
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
     "@hookform/resolvers": "^3.4.2",
+    "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
