--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -45,8 +45,7 @@
         <data android:scheme="http" />
         <data android:scheme="https" />
         <data android:host="@string/azzapp_domain" />
-        <data android:pathPattern="/[^/]*" />
-        <data android:pathPattern="/[^/]*/post/.*" />
+        <data android:pathPattern="/.*" />
       </intent-filter>
     </activity>
   </application>
