--- a/packages/backoffice/turbo.json
+++ b/packages/backoffice/turbo.json
@@ -1,14 +1,25 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
-  "pipeline": {
+  "extends": [
+    "//"
+  ],
+  "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "inputs": ["src/**", "src/public/**"],
-      "outputs": [".next/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "inputs": [
+        "src/**",
+        "src/public/**"
+      ],
+      "outputs": [
+        ".next/**"
+      ]
     },
     "typecheck": {
-      "dependsOn": ["^build"]
+      "dependsOn": [
+        "^build"
+      ]
     }
   }
 }
