--- a/packages/schema/turbo.json
+++ b/packages/schema/turbo.json
@@ -1,15 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
-  "pipeline": {
+  "extends": [
+    "//"
+  ],
+  "tasks": {
     "build": {
-      "dependsOn": ["//#relay:build", "^build"],
-      "outputs": ["lib/**"],
-      "inputs": ["src/**"]
+      "dependsOn": [
+        "//#relay:build",
+        "^build"
+      ],
+      "outputs": [
+        "lib/**"
+      ],
+      "inputs": [
+        "src/**"
+      ]
     },
     "typecheck": {
-      "dependsOn": ["//#relay:build", "^build"],
-      "inputs": ["src/**"]
+      "dependsOn": [
+        "//#relay:build",
+        "^build"
+      ],
+      "inputs": [
+        "src/**"
+      ]
     }
   }
 }
