--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "turbo run test",
     "build": "turbo run build",
     "build-app-dependencies": "turbo run app:build --filter=app^...",
-    "dev": "node ./scripts/dev.js",
+    "dev": "turbo watch dev graphql-codegen relay:watch",
     "build:ios": "turbo run build:ios",
     "build:android": "turbo run build:android",
     "graphql-codegen": "graphql-codegen",
@@ -33,10 +33,6 @@
     "write-dev-changelog": "node ./scripts/writeDevChangeLog.js",
     "persist-queries": "yarn workspace @azzapp/web persist-queries"
   },
-  "devScripts": [
-    "relay:watch",
-    "graphql-codegen --watch"
-  ],
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
@@ -70,8 +66,6 @@
     "babel-plugin-formatjs": "^10.5.16",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-relay": "^16.2.0",
-    "blessed": "^0.1.81",
-    "blessed-xterm": "^1.4.4",
     "csv-stringify": "^6.4.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -90,7 +84,7 @@
     "semver": "^7.6.0",
     "tagged-versions": "^1.3.0",
     "ts-jest": "^29.1.2",
-    "turbo": "^1.13.3",
+    "turbo": "latest",
     "typescript": "^5.4.5"
   },
   "resolutions": {
