--- a/packages/data/turbo.json
+++ b/packages/data/turbo.json
@@ -1,18 +1,34 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
-  "pipeline": {
+  "extends": [
+    "//"
+  ],
+  "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["lib/**"],
-      "inputs": ["src/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "lib/**"
+      ],
+      "inputs": [
+        "src/**"
+      ]
     },
     "typecheck": {
-      "dependsOn": ["^build"],
-      "inputs": ["src/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "inputs": [
+        "src/**"
+      ]
     },
     "test": {
-      "inputs": ["src/**", "jest.config.js", "scripts/jestSetup.js"]
+      "inputs": [
+        "src/**",
+        "jest.config.js",
+        "scripts/jestSetup.js"
+      ]
     }
   }
 }
