--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "turbo run test",
     "build": "turbo run build",
     "build-app-dependencies": "turbo run app:build --filter=./packages/app^...",
+    "build-web": "turbo run build --filter=./packages/web",
     "dev": "turbo watch dev graphql-codegen relay:watch",
     "graphql-codegen": "graphql-codegen",
     "relay:build": "relay-compiler",
