--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -63,27 +63,27 @@
     "@formatjs/intl-locale": "^3.4.6",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@hookform/resolvers": "^3.4.2",
+    "@hookform/resolvers": "^3.6.0",
     "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native/metro-config": "^0.74.83",
+    "@react-native/metro-config": "^0.74.84",
     "@reeq/react-native-passkit": "^0.1.3",
     "@sentry/react-native": "^5.22.3",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "^1.3.0",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^51.0.9",
+    "expo": "^51.0.11",
     "expo-av": "^14.0.5",
     "expo-blur": "^13.0.2",
     "expo-clipboard": "~6.0.3",
     "expo-contacts": "~13.0.3",
-    "expo-font": "~12.0.6",
+    "expo-font": "^12.0.7",
     "expo-haptics": "~13.0.1",
-    "expo-image": "~1.12.9",
+    "expo-image": "^1.12.11",
     "expo-linear-gradient": "~13.0.2",
     "expo-media-library": "~16.0.3",
     "expo-sensors": "13.0.8",
@@ -98,7 +98,7 @@
     "react": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-intl": "^6.6.8",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.2",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-bootsplash": "^5.5.3",
@@ -114,16 +114,16 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "^6.3.1",
     "react-native-permissions": "^4.1.5",
-    "react-native-purchases": "^7.27.2",
+    "react-native-purchases": "^7.27.3",
     "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "~3.11.0",
-    "react-native-safe-area-context": "^4.10.3",
+    "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
     "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.0.5",
+    "react-native-vision-camera": "^4.1.0",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
