--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "react-native-screens@^3.31.1": "patch:react-native-screens@npm%3A3.31.1#./.yarn/patches/react-native-screens-npm-3.31.1-d5786be485.patch",
     "@shopify/react-native-skia@^1.2.3": "patch:@shopify/react-native-skia@npm%3A1.2.3#./.yarn/patches/@shopify-react-native-skia-npm-1.2.3-f2a2700481.patch",
     "expo-contacts@~13.0.3": "patch:expo-contacts@npm%3A13.0.3#./.yarn/patches/expo-contacts-npm-13.0.3-c6435ab472.patch",
-    "react-native-vision-camera@^4.0.5": "patch:react-native-vision-camera@npm%3A4.0.5#./.yarn/patches/react-native-vision-camera-npm-4.0.5-0f2bdc9daa.patch",
-    "@shopify/react-native-skia@^1.3.0": "patch:@shopify/react-native-skia@npm%3A1.3.0#./.yarn/patches/@shopify-react-native-skia-npm-1.3.0-85f18b81fd.patch"
+    "@shopify/react-native-skia@^1.3.0": "patch:@shopify/react-native-skia@npm%3A1.3.0#./.yarn/patches/@shopify-react-native-skia-npm-1.3.0-85f18b81fd.patch",
+    "react-native-vision-camera@^4.1.0": "patch:react-native-vision-camera@npm%3A4.1.0#./.yarn/patches/react-native-vision-camera-npm-4.1.0-6827e73cfb.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
