--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -71,7 +71,7 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.74.84",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "^5.22.3",
+    "@sentry/react-native": "~5.22.3",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "^1.3.0",
     "chroma-js": "^2.4.2",
@@ -129,6 +129,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@react-native/babel-preset": "^0.74.84",
     "@testing-library/react-native": "^12.5.1",
     "@types/chroma-js": "^2.4.4",
     "@types/react": "^18.3.3",
