--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,9 @@
     "clean": "rm -rf lib && rm -f tsconfig.next.tsbuildinfo && rm -rf .next && rm -rf node_modules",
     "persist-queries": "node ./scripts/persistQueries.js"
   },
+  "devScripts": [
+    "dev"
+  ],
   "dependencies": {
     "@azzapp/data": "workspace:^",
     "@azzapp/i18n": "workspace:^",
