fix: add framer urls in redirection (#3857)

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -34,6 +34,10 @@
     {
       "source": "/legal/:match*",
       "destination": "https://storefront.azzapp.com/legal/:match*"
+    },
+    {
+      "source": "/_framer/:match*",
+      "destination": "https://storefront.azzapp.com/_framer/:match*"
     }
   ]
 }
