chore: put back match

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -36,8 +36,8 @@
       "destination": "https://storefront.azzapp.com/legal/:match*"
     },
     {
-      "source": "/_framer/login",
-      "destination": "https://storefront.azzapp.com/_framer/login/?continue=/&query="
+      "source": "/_framer/:match*",
+      "destination": "https://storefront.azzapp.com/_framer/:match*"
     }
   ]
 }
