fix(payment): #3882 cancel all out of date subscriptions (#3883)

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -13,6 +13,12 @@
       ]
     }
   ],
+  "crons": [
+    {
+      "path": "/api/cron/cancelPayments",
+      "schedule": "*/1 * * * *"
+    }
+  ],
   "rewrites": [
     { "source": "/", "destination": "https://storefront.azzapp.com/" },
     {
